# kwark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  renderdoc.cap
shaders/: alias_model.frag  alias_model.vert  default.frag  default.vert  fluid.frag  fluid.vert  sky.frag  sky.vert  text.frag  text.vert  uniforms.glsl
src/: BSPParser.cpp  BSPParser.h  BSPTextureParser.cpp  BSPTextureParser.h  Camera.cpp  Camera.h  Controller.cpp  Controller.h  DirectInput.cpp  DirectInput.h  FileSystem.cpp  FileSystem.h  MainGLFW.cpp  Mesh.cpp  Mesh.h  Mouse.cpp  Mouse.h  PAKParser.cpp  PAKParser.h  Palette.cpp  Palette.h  Platform.h  Present.cpp  Present.h  RenderLevel.cpp  RenderLevel.h  RenderModel.cpp  RenderModel.h  RenderText.cpp  RenderText.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  Vulkan.cpp  Vulkan.h  VulkanApplication.cpp  VulkanApplication.h  VulkanBuffer.cpp  VulkanBuffer.h  (+23 more)
src/Input/: Controller.cpp  DirectInput.cpp  DirectInput.h  Mouse.cpp
src/Quake/: Mesh.h
